try a fix for project image overflow

--- a/style.css
+++ b/style.css
@@ -175,7 +175,6 @@ section .content {
 .mockup img {
   display: block;
   width: 100%;
-  object-fit: cover;
 }
 
 .icon-links {
